--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@google/generative-ai": "^0.24.0",
+    "@headlessui/react": "^2.2.1",
     "@tailwindcss/postcss": "^4.1.3",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
