--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "build:linux": "electron-vite build && electron-builder --linux"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.10",
+    "@ai-sdk/google": "^1.2.11",
+    "@ai-sdk/openai": "^1.3.15",
     "@anthropic-ai/sdk": "^0.39.0",
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
     "@tailwindcss/postcss": "^4.1.3",
+    "ai": "^4.3.9",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "electron-updater": "^6.3.9",
