--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
+    "@monaco-editor/loader": "^1.5.0",
     "@openrouter/ai-sdk-provider": "^0.4.5",
     "@tailwindcss/postcss": "^4.1.3",
     "ai": "^4.3.9",
