--- a/package.json
+++ b/package.json
@@ -38,14 +38,17 @@
     "dayjs": "^1.11.13",
     "electron-updater": "^6.3.9",
     "font-awesome": "^4.7.0",
+    "i": "^0.3.7",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.52.2",
+    "npm": "^11.3.0",
     "openai": "^4.93.0",
     "postcss": "^8.5.3",
     "react-monaco-editor": "^0.58.0",
     "tailwindcss": "^4.1.3",
     "vitest": "^3.1.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
